sampler/chain/projects/conductor/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/service/ExecutionService.java:109: error: [NullAway] (INDEX= 98) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        String queueName = QueueUtils.getQueueName(taskType, domain, null, null);
                                                                     ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/DeciderService.java:531: error: [NullAway] (INDEX= 53) (Covered) passing @Nullable parameter 'null' where @NonNull is required
            workflowInstance.setExternalInputPayloadStoragePath(null);
                                                                ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/service/WorkflowBulkServiceImpl.java:53: error: [NullAway] (INDEX= 132) (Covered) passing @Nullable parameter 'e.getMessage()' where @NonNull is required
                bulkResponse.appendFailedResponse(workflowId, e.getMessage());
                                                                          ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/tasks/SubWorkflow.java:104: error: [NullAway] (INDEX= 112) (Covered) passing @Nullable parameter 'e.getMessage()' where @NonNull is required
            task.setReasonForIncompletion(e.getMessage());
                                                      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/utils/ExternalPayloadStorageUtils.java:162: error: [NullAway] (INDEX= 67) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                        ((Workflow) entity).setOutput(null);
                                                      ^

	(see http://t.uber.com/nullaway )
